--- a/docs/QuestionBank/Leetcode/101. Symmetric Tree.md
+++ b/docs/QuestionBank/Leetcode/101. Symmetric Tree.md
@@ -1,8 +1,8 @@
 ---
 id: LC101
-title: LC101. Symmetric Tree
-sidebar_label: LC101. Symmetric Tree
-tags: ['Patterns/Tree', 'DataStructures/Tree']
+title: Symmetric Tree
+sidebar_label: Symmetric Tree
+tags: ["Patterns/Tree", "DataStructures/Tree"]
 ---
 
 ## Problem Description
@@ -22,6 +22,7 @@ For example, this binary tree [1, 2, 2, 3, 4, 4, 3] is symmetric:
 ```
 
 But the following [1, 2, 2, null, 3, null, 3] is not:
+
 ```
     1
    / \
@@ -30,26 +31,29 @@ But the following [1, 2, 2, null, 3, null, 3] is not:
    3    3
 ```
 
-## Solution 
+## Solution
 
 ### High level strategy
+
 To check whether two nodes are identical, we can check the following conditions:
+
 1. If both nodes are null, then they **are the same**.
 2. If one of the nodes is null, then they **are not the same**.
 3. If the value of one node is not equal to the value of the other, then they **are not the same**.
 
 To check whether a tree is symmetrical, we can simply apply the logics above to the opposite nodes on each side of the tree. That is, we compare the right child of the left child with the left child of the right child, so on and so forth. We recurse down both sides of the root node, and return true if and only if both sides return true. The time complexity of this solution is **O(n)**, where 'n' is equal to the number of nodes. The space complexity of this solution is **O(logn)**, or **O(h)**, where 'h' is equal to the height of the tree.
 
-### Code 
+### Code
+
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
 <Tabs
-  defaultValue="js"
-  values={[
-    { label: 'Javascript', value: 'js', },
-    { label: 'Java', value: 'java', }
-  ]
+defaultValue="js"
+values={[
+{ label: 'Javascript', value: 'js', },
+{ label: 'Java', value: 'java', }
+]
 }>
 <TabItem value="js">
 
@@ -64,18 +68,19 @@ import TabItem from '@theme/TabItem';
  **/
 
 const isSymmetric = (root) => {
-    if (root === null) return true;
-    return isSame(root.left, root.right);
+  if (root === null) return true;
+  return isSame(root.left, root.right);
 };
 
 const isSame = (node1, node2) => {
-    if (node1 === null && node2 === null) return true;
-    if (node1 === null || node2 === null) return false;
-    if (node1.val !== node2.val) return false;
-    
-    return isSame(node1.left, node2.right) && isSame(node1.right, node2.left);
+  if (node1 === null && node2 === null) return true;
+  if (node1 === null || node2 === null) return false;
+  if (node1.val !== node2.val) return false;
+
+  return isSame(node1.left, node2.right) && isSame(node1.right, node2.left);
 };
 ```
+
 </TabItem>
 <TabItem value="java">
 
@@ -92,25 +97,26 @@ private boolean isSymmetricHelp(TreeNode left, TreeNode right){
     return isSymmetricHelp(left.left, right.right) && isSymmetricHelp(left.right, right.left);
 }
 ```
+
 </TabItem>
 </Tabs>
 
 ## Other Solutions
+
 <details>
 <summary>BFS Approach</summary>
-
 
 ```java
 /**
  * We can also explore each level through BFS,
  * then iterate through all nodes in each level to see if they are a mirror
- * (same idea as checking if a string is a palindrome). 
+ * (same idea as checking if a string is a palindrome).
  */
 
 class Solution {
     public boolean isSymmetric(TreeNode root) {
         if (root == null) return true;
-        Queue<TreeNode> queue = new LinkedList<>(); 
+        Queue<TreeNode> queue = new LinkedList<>();
         queue.add(root);
         while(queue.size() > 0) {
             int size = queue.size();
@@ -136,4 +142,5 @@ class Solution {
     }
 }
 ```
+
 </details>
