--- a/docs/QuestionBank/Leetcode/103. Binary Tree Zigzag Level Order Traversal.md
+++ b/docs/QuestionBank/Leetcode/103. Binary Tree Zigzag Level Order Traversal.md
@@ -1,8 +1,8 @@
 ---
 id: LC103
-title: LC103. Binary Tree Zigzag Level Order Traversal
-sidebar_label: LC103. Binary Tree Zigzag Level Order Traversal
-tags: ['Patterns/Tree', 'DataStructures/Tree']
+title: Binary Tree Zigzag Level Order Traversal
+sidebar_label: Binary Tree Zigzag Level Order Traversal
+tags: ["Patterns/Tree", "DataStructures/Tree"]
 ---
 
 ## Problem Description
@@ -27,6 +27,7 @@ return its zigzag level order traversal as: [[3], [20, 9], [15, 7]].
 ## Solution
 
 ### High level strategy
+
 Our strategy to solve this problem will be to conduct a breadth-first search. However, unlike an ordinary breadth-first search, we will only traverse from the left to right on even levels (including zero), and from the right to left on odd levels. The time complexity of this solution is **O(n)**, where 'n' is equal to the number of nodes. The space complexity of this solution is **O(logn)**, or **O(h)**, where 'h' is equal to the height of the tree.
 
 ```
@@ -38,6 +39,7 @@ Our strategy to solve this problem will be to conduct a breadth-first search. Ho
 ```
 
 ### Code
+
 ```javascript
 /**
  * Definition for a binary tree node.
@@ -49,42 +51,42 @@ Our strategy to solve this problem will be to conduct a breadth-first search. Ho
  **/
 
 const zigzagLevelOrder = (root) => {
-    let result = [];
-    
-    let recurse = (node, level) => {
-        if (node === null) return;
-        if (!result[level]) {
-            result[level] = [];
-        }
-        
-        if (level % 2 === 0) {
-            result[level].push(node.val); // left to right traversal is implemented with the push method
-        } else {
-            result[level].unshift(node.val); // right to left traversal is implemented with the unshift method
-        }
-        
-        recurse(node.left, level + 1);
-        recurse(node.right, level + 1);
-    };
-    
-    
-    recurse(root, 0);
-    return result;
+  let result = [];
+
+  let recurse = (node, level) => {
+    if (node === null) return;
+    if (!result[level]) {
+      result[level] = [];
+    }
+
+    if (level % 2 === 0) {
+      result[level].push(node.val); // left to right traversal is implemented with the push method
+    } else {
+      result[level].unshift(node.val); // right to left traversal is implemented with the unshift method
+    }
+
+    recurse(node.left, level + 1);
+    recurse(node.right, level + 1);
+  };
+
+  recurse(root, 0);
+  return result;
 };
 ```
 
 ## Other Solutions
+
 - We can potentially use a deque, insert it at head for odd levels, and tail for even levels
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
 <Tabs
-  defaultValue="java"
-  values={[
-      { label: 'Java', value: 'java', },
-    { label: 'Python', value: 'py', },
-  ]
+defaultValue="java"
+values={[
+{ label: 'Java', value: 'java', },
+{ label: 'Python', value: 'py', },
+]
 }>
 <TabItem value="java">
 
@@ -132,12 +134,12 @@ class Solution(object):
         :type root: TreeNode
         :rtype: List[List[int]]
         """
-        if not root: 
+        if not root:
             return []
-        leftToRight = True 
-        dq = collections.deque() 
+        leftToRight = True
+        dq = collections.deque()
         dq.append(root)
-        traversal = [] 
+        traversal = []
         while len(dq) > 0:
             level = []
             for i in range(len(dq)):
@@ -159,5 +161,6 @@ class Solution(object):
             leftToRight = not leftToRight
         return traversal
 ```
+
 </TabItem>
 </Tabs>
