--- a/docs/QuestionBank/Leetcode/108. Convert Sorted Array to Binary Search Tree.md
+++ b/docs/QuestionBank/Leetcode/108. Convert Sorted Array to Binary Search Tree.md
@@ -1,8 +1,8 @@
 ---
 id: LC108
-title: LC108. Convert Sorted Array to Binary Search Tree
-sidebar_label: LC108. Convert Sorted Array to Binary Search Tree
-tags: ['Patterns/Tree', 'DataStructures/Tree']
+title: Convert Sorted Array to Binary Search Tree
+sidebar_label: Convert Sorted Array to Binary Search Tree
+tags: ["Patterns/Tree", "DataStructures/Tree"]
 ---
 
 ## Problem Description
@@ -11,8 +11,9 @@ Source: https://leetcode.com/problems/convert-sorted-array-to-binary-search-tree
 
 Given an array where elements are sorted in ascending order, convert it to a height balanced BST. A height-balanced binary tree is defined as a binary tree in which the depth of the two subtrees of every node never differ by more than 1.
 
-For example: 
+For example:
 Given the sorted array: [-10, -3, 0, 5, 9], return the following tree:
+
 ```
         0
        / \
@@ -24,14 +25,16 @@ Given the sorted array: [-10, -3, 0, 5, 9], return the following tree:
 ## Solution
 
 ### High level strategy
-To ensure that both sides of the tree has an equal amount of nodes, and to maintain the binary search tree invariant, we must always choose the middle element of the input array as our root node. After setting the root node of the tree, we split the input array in two sub-arrays to repeat the aforementioned logic. The left sub-array will start from the beginning of the array up to the index of the middle node. The right sub-arry will start from the index after the middle node, up to the end of the array. The middle element of every sub-array will always be the root node of every subtree. 
+
+To ensure that both sides of the tree has an equal amount of nodes, and to maintain the binary search tree invariant, we must always choose the middle element of the input array as our root node. After setting the root node of the tree, we split the input array in two sub-arrays to repeat the aforementioned logic. The left sub-array will start from the beginning of the array up to the index of the middle node. The right sub-arry will start from the index after the middle node, up to the end of the array. The middle element of every sub-array will always be the root node of every subtree.
 
 For example:
+
 ```
 Input: [1, 2, 3, 4, 5, 6, 7, 8, 9];
 Output:             [5] ---> root: [5], left: [1, 2, 3, 4], right: [6, 7, 8, 9];
                   /     \
-               [3]       [7] ---> root: [3], left: [1, 2], right: [4]; 
+               [3]       [7] ---> root: [3], left: [1, 2], right: [4];
               /   \     /   \     root: [7], left: [6], right: [8, 9];
             [1]   [4] [6]   [8] ---> root: [1], left: null, right[2];
               \               \      root: [8], left: null, right[9];
@@ -41,15 +44,16 @@ Output:             [5] ---> root: [5], left: [1, 2, 3, 4], right: [6, 7, 8, 9];
 The time and space complexity of this solution are both **O(n)**, where 'n' is equal to the number of nodes.
 
 ### Code
+
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
 <Tabs
-  defaultValue="js"
-  values={[
-    { label: 'Javascript', value: 'js', },
-    { label: 'Java', value: 'java', }
-  ]
+defaultValue="js"
+values={[
+{ label: 'Javascript', value: 'js', },
+{ label: 'Java', value: 'java', }
+]
 }>
 <TabItem value="js">
 
@@ -64,21 +68,21 @@ import TabItem from '@theme/TabItem';
  **/
 
 const sortedArrayToBST = (nums) => {
+  let helper = (left, right) => {
+    if (left > right) return null;
 
-    let helper = (left, right) => {
-        if (left > right) return null;
+    let index = Math.floor((left + right) / 2);
+    let root = new TreeNode(nums[index]);
+    root.left = helper(left, index - 1);
+    root.right = helpter(index + 1, right);
 
-        let index = Math.floor((left + right) / 2);
-        let root = new TreeNode(nums[index]);
-        root.left = helper(left, index - 1);
-        root.right = helpter(index + 1, right);
+    return root;
+  };
 
-        return root;
-    };
-
-    return helper(0, nums.length - 1);
+  return helper(0, nums.length - 1);
 };
 ```
+
 </TabItem>
 <TabItem value="java">
 
@@ -107,5 +111,6 @@ public TreeNode sortedArrayToBST(int[] nums) {
   return root;
 }
 ```
+
 </TabItem>
 </Tabs>
