--- a/docs/QuestionBank/Leetcode/199. Binary Tree Right Side View.md
+++ b/docs/QuestionBank/Leetcode/199. Binary Tree Right Side View.md
@@ -1,8 +1,8 @@
 ---
 id: LC199
-title: LC199. Binary Tree Right Side View
-sidebar_label: LC199. Binary Tree Right Side View
-tags: ['Patterns/Tree', 'DataStructures/Tree']
+title: Binary Tree Right Side View
+sidebar_label: Binary Tree Right Side View
+tags: ["Patterns/Tree", "DataStructures/Tree"]
 ---
 
 ## Problem Description
@@ -29,7 +29,9 @@ return [1, 3, 4, 5].
 ## BFS Solution
 
 ### High level strategy
+
 Our strategy to solve this problem is to conduct a breadth-first search. On each level, we traverse from the left to right, but only keeping the value of the right-most node. To implement this solution, we will make use of the index property of arrays. The index of every element in the resulting array is the level of the corresponding right-most node on the tree. To see this, one can simply flip the tree on its side. The time complexity of this solution is **O(n)**, where 'n' is equal to the number of nodes. The space complexity of this solution is **O(logn)**, or **O(h)**, where 'h' is equal to the height of the tree.
+
 ```
 result: [1, 3, 4, 5];
 
@@ -48,11 +50,11 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
 <Tabs
-  defaultValue="js"
-  values={[
-    { label: 'Javascript', value: 'js', },
-    { label: 'Python', value: 'py', }
-  ]
+defaultValue="js"
+values={[
+{ label: 'Javascript', value: 'js', },
+{ label: 'Python', value: 'py', }
+]
 }>
 <TabItem value="js">
 
@@ -67,58 +69,62 @@ import TabItem from '@theme/TabItem';
  **/
 
 const rightSideView = (root) => {
-    let result = [];
+  let result = [];
 
-    let recurse = (node, level) => {
-        if (node === null) return;
-        result[level] = node.val; // as we traverse from the left to right, the element on that level in the result array will be replaced with the right most node in the tree. 
-        recurse(node.left, level + 1);
-        recurse(node.right, level + 1);
-    };
+  let recurse = (node, level) => {
+    if (node === null) return;
+    result[level] = node.val; // as we traverse from the left to right, the element on that level in the result array will be replaced with the right most node in the tree.
+    recurse(node.left, level + 1);
+    recurse(node.right, level + 1);
+  };
 
-    recurse(root, 0);
-    return result;
+  recurse(root, 0);
+  return result;
 };
 ```
+
 </TabItem>
 <TabItem value="py">
 
 ```python
 # Trick: Just store the lest element on each level
 def rightSideView(self, root: TreeNode) -> List[int]:
-    if not root: 
-        return [] 
+    if not root:
+        return []
 
     trav, q = [], collections.deque([root])
 
     while q:
-        cur = None 
-        for i in range(len(q)): 
-            cur = q.popleft() 
-            if cur.left: 
+        cur = None
+        for i in range(len(q)):
+            cur = q.popleft()
+            if cur.left:
                 q.append(cur.left)
-            if cur.right: 
-                q.append(cur.right)            
+            if cur.right:
+                q.append(cur.right)
         trav.append(cur.val)
 
     return trav
 ```
+
 </TabItem>
 </Tabs>
 
 ## DFS Solutions
+
 ### High level strategy
 
 We can modify the code and covert it into a DFS solution, the same concept applies.
 
 ### Code
+
 <Tabs
-  defaultValue="java"
-  values={[
-    { label: 'Java', value: 'java', },
-    { label: 'Python', value: 'py', },
-    { label: 'C++', value:'cp' }
-  ]
+defaultValue="java"
+values={[
+{ label: 'Java', value: 'java', },
+{ label: 'Python', value: 'py', },
+{ label: 'C++', value:'cp' }
+]
 }>
 <TabItem value="java">
 
@@ -129,7 +135,7 @@ class Solution {
         dfs(root, 1, ans);
         return ans;
     }
-    
+
     private void dfs(TreeNode node, int level, List<Integer> ans){
         if(node == null){
             return;
@@ -142,25 +148,26 @@ class Solution {
     }
 }
 ```
+
 </TabItem>
 <TabItem value="py">
 
 ```python
 # Trick: Keep track of depth and update it via the traversal length. Make sure you stack left first then right to ensure properly visiting right first.
 def rightSideView(self, root: TreeNode) -> List[int]:
-    if not root: 
-        return [] 
+    if not root:
+        return []
 
     s, maxdepth = [(root, 1)], -1
-    trav = [] 
+    trav = []
 
-    while s: 
-        cur, depth = s.pop() 
+    while s:
+        cur, depth = s.pop()
 
-        if cur: 
+        if cur:
             maxdepth = max(maxdepth, depth)
 
-        if len(trav) < depth: 
+        if len(trav) < depth:
             trav.append(cur.val)
 
         if cur.left:
@@ -169,6 +176,7 @@ def rightSideView(self, root: TreeNode) -> List[int]:
             s.append((cur.right, depth+1))
     return trav
 ```
+
 </TabItem>
 <TabItem value='cp'>
 
@@ -193,5 +201,6 @@ private:
     vector<int> ans;
 };
 ```
+
 </TabItem>
 </Tabs>
