--- a/docs/QuestionBank/Leetcode/236. Lowest Common Ancestor of a Binary Tree.md
+++ b/docs/QuestionBank/Leetcode/236. Lowest Common Ancestor of a Binary Tree.md
@@ -1,8 +1,8 @@
 ---
 id: LC236
-title: LC236. Lowest Common Ancestor of a Binary Tree
-sidebar_label: LC236. Lowest Common Ancestor of a Binary Tree
-tags: ['Patterns/Tree', 'DataStructures/Tree']
+title: Lowest Common Ancestor of a Binary Tree
+sidebar_label: Lowest Common Ancestor of a Binary Tree
+tags: ["Patterns/Tree", "DataStructures/Tree"]
 ---
 
 ## Problem Description
@@ -13,8 +13,9 @@ Given a binary tree, return the lowest common ancestor (LCA) of two given nodes 
 
 According to the <a href="https://en.wikipedia.org/wiki/Lowest_common_ancestor">definition of LCA on Wikipedia</a>: “The lowest common ancestor is defined between two nodes p and q as the lowest node in T that has both p and q as descendants (where we allow **a node to be a descendant of itself**).”
 
-For example: 
+For example:
 Given binary tree [3, 5, 1, 6, 2, 0, 8, null, null, 7, 4], where p = 5, and q = 1,
+
 ```
         3
       /   \
@@ -24,24 +25,27 @@ Given binary tree [3, 5, 1, 6, 2, 0, 8, null, null, 7, 4], where p = 5, and q = 
      / \
     7   4
 ```
-return 3. 
+
+return 3.
 
 ## Solution
 
 ### High level strategy
-Our approach to this problem is to solve it recursively. In our base case, we return the current node if it is equal to 'p', 'q', or null. This way, we will receive falsy values as we recurse down a branch that does not contain either 'p' or 'q'. Therefore, if either the left or right side of the current node returns null, then we know that that side of the tree does not contain the target values, and we can simply check the opposite side. We repeat this process until we arrive at a subtree that contains both target values, at which point we return the root node of the subtree. The time complexity of this solution is **O(n)**, where 'n' is equal to the number of nodes. The space complexity is **O(logn)**, or **O(h)**, where 'h' is equal to the height of the tree. 
+
+Our approach to this problem is to solve it recursively. In our base case, we return the current node if it is equal to 'p', 'q', or null. This way, we will receive falsy values as we recurse down a branch that does not contain either 'p' or 'q'. Therefore, if either the left or right side of the current node returns null, then we know that that side of the tree does not contain the target values, and we can simply check the opposite side. We repeat this process until we arrive at a subtree that contains both target values, at which point we return the root node of the subtree. The time complexity of this solution is **O(n)**, where 'n' is equal to the number of nodes. The space complexity is **O(logn)**, or **O(h)**, where 'h' is equal to the height of the tree.
 
 ### Code
+
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
 <Tabs
-  defaultValue="js"
-  values={[
-    { label: 'Javascript', value: 'js', },
-    { label: 'Java', value: 'java', },
-    { label: 'Python', value: 'py', }
-  ]
+defaultValue="js"
+values={[
+{ label: 'Javascript', value: 'js', },
+{ label: 'Java', value: 'java', },
+{ label: 'Python', value: 'py', }
+]
 }>
 <TabItem value="js">
 
@@ -55,16 +59,17 @@ import TabItem from '@theme/TabItem';
  * }
  **/
 const lowestCommonAncestor = (root, p, q) => {
-    if (root === null || root === p || root === q) return root;
-    let left = lowestCommonAncestor(root.left, p, q);
-    let right = lowestCommonAncestor(root.right, p, q); 
-    
-    if (!left) return right;
-    if (!right) return left;
-    
-    return root;
+  if (root === null || root === p || root === q) return root;
+  let left = lowestCommonAncestor(root.left, p, q);
+  let right = lowestCommonAncestor(root.right, p, q);
+
+  if (!left) return right;
+  if (!right) return left;
+
+  return root;
 };
 ```
+
 </TabItem>
 <TabItem value="java">
 
@@ -85,6 +90,7 @@ public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
     return left == null ? right : right == null ? left : root;
 }
 ```
+
 </TabItem>
 <TabItem value="py">
 
@@ -106,10 +112,10 @@ class Solution(object):
         """
 
         if not root:
-            return root 
+            return root
 
-        if root == p or root == q: 
-            return root 
+        if root == p or root == q:
+            return root
 
         left = self.lowestCommonAncestor(root.left, p, q)
         right = self.lowestCommonAncestor(root.right, p, q)
@@ -119,5 +125,6 @@ class Solution(object):
         else:
             return left or right
 ```
+
 </TabItem>
 </Tabs>
