--- a/docs/QuestionBank/Leetcode/310. Minimum Height Trees.md
+++ b/docs/QuestionBank/Leetcode/310. Minimum Height Trees.md
@@ -1,14 +1,15 @@
 ---
 id: LC310
-title: LC310. Minimum Height Trees
-sidebar_label: LC310. Minimum Height Trees
-tags: ['Patterns/Graph']
+title: Minimum Height Trees
+sidebar_label: Minimum Height Trees
+tags: ["Patterns/Graph"]
 ---
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
 ## Problem Description
+
 https://leetcode.com/problems/minimum-height-trees/
 
 For an undirected graph with tree characteristics, we can choose any node as the root. The result graph is then a rooted tree. Among all possible rooted trees, those with minimum height are called minimum height trees (MHTs). Given such a graph, write a function to find all the MHTs and return a list of their root labels.
@@ -27,7 +28,7 @@ Input: n = 4, edges = [[1, 0], [1, 2], [1, 3]]
         |
         1
        / \
-      2   3 
+      2   3
 
 Output: [1]
 ```
@@ -43,7 +44,7 @@ Input: n = 6, edges = [[0, 3], [1, 3], [2, 3], [4, 3], [5, 4]]
         |
         4
         |
-        5 
+        5
 
 Output: [3, 4]
 ```
@@ -51,11 +52,11 @@ Output: [3, 4]
 ## Solution
 
 <Tabs
-  defaultValue="java"
-  values={[
-    { label: 'Java', value: 'java', },
-    { label: 'Python', value: 'py', },
-  ]
+defaultValue="java"
+values={[
+{ label: 'Java', value: 'java', },
+{ label: 'Python', value: 'py', },
+]
 }>
 <TabItem value="java">
 
@@ -107,21 +108,21 @@ class Solution(object):
         """
 
         graph = collections.defaultdict(set)
-        for u,v in edges: 
+        for u,v in edges:
             graph[u].add(v)
             graph[v].add(u)
 
-        leaves = { i for i in range(n) if len(graph[i]) <= 1 } 
-        newLeaves = set() 
+        leaves = { i for i in range(n) if len(graph[i]) <= 1 }
+        newLeaves = set()
 
-        rn = n 
+        rn = n
 
-        while rn > 2: 
-            for l in leaves: 
+        while rn > 2:
+            for l in leaves:
                 rn -= 1
-                for parent in graph[l]: 
-                    graph[parent].remove(l) 
-                    if len(graph[parent]) == 1: 
+                for parent in graph[l]:
+                    graph[parent].remove(l)
+                    if len(graph[parent]) == 1:
                         newLeaves.add(parent)
             leaves = newLeaves
             newLeaves = set()
