--- a/docs/QuestionBank/Leetcode/560. Subarray Sum Equals K.md
+++ b/docs/QuestionBank/Leetcode/560. Subarray Sum Equals K.md
@@ -1,8 +1,8 @@
 ---
 id: LC560
-title: LC310. Minimum Height Trees
-sidebar_label: LC310. Minimum Height Trees
-tags: ['Patterns/Graph']
+title: Minimum Height Trees
+sidebar_label: Minimum Height Trees
+tags: ["Patterns/Graph"]
 ---
 
 ## Problem Description
@@ -17,4 +17,3 @@ Output: 2
 Note:
 The length of the array is in range [1, 20,000].
 The range of numbers in the array is [-1000, 1000] and the range of the integer k is [-1e7, 1e7].
-
