use patternize for trees

--- a/docs/QuestionBank/Leetcode/101. Symmetric Tree.md
+++ b/docs/QuestionBank/Leetcode/101. Symmetric Tree.md
@@ -4,32 +4,79 @@ title: Symmetric Tree
 sidebar_label: Symmetric Tree
 tags: ["Patterns/Tree", "DataStructures/Tree"]
 ---
+import { Tree } from '@patternize/components'
 
 ## Problem Description
 
-Source: https://leetcode.com/problems/symmetric-tree/
-
 Given a binary tree, check whether it is a mirror of itself (ie, symmetric around its center).
-
 For example, this binary tree [1, 2, 2, 3, 4, 4, 3] is symmetric:
 
-```
-    1
-   / \
-  2   2
- / \ / \
-3  4 4  3
-```
+export const BinaryTree = () => {
+    const tree = {
+        name: '1',
+        children: [
+            {
+                name: '2',
+                children: [
+                    {
+                        name: '3'
+                    },
+                    {
+                        name: '4'
+                    }
+                ]
+            },
+            {
+                name: '2', 
+                children: [
+                    {
+                        name: '4'
+                    },
+                    {
+                        name: '3'
+                    }
+                ]
+            }
+        ]
+    }
+    return <>{typeof window !== 'undefined' &&  <Tree inputData={tree} maxHeight={250}/>}</>
+}
 
+<BinaryTree />
 But the following [1, 2, 2, null, 3, null, 3] is not:
 
-```
-    1
-   / \
-  2   2
-   \   \
-   3    3
-```
+export const AsymmetricTree = () => {
+    const tree = {
+        name: '1',
+        children: [
+            {
+                name: '2',
+                children: [
+                    {
+                        name: 'null'
+                    },
+                    {
+                        name: '3'
+                    }
+                ]
+            },
+            {
+                name: '2',
+                children: [
+                    {
+                        name: 'null'
+                    },
+                    {
+                        name: '3'
+                    }
+                ]
+            }
+        ]
+    }
+    return <>{typeof window !== 'undefined' &&  <Tree inputData={tree} maxHeight={250}/>}</>
+}
+
+<AsymmetricTree />
 
 ## Solution
 
@@ -144,3 +191,5 @@ class Solution {
 ```
 
 </details>
+
+Source: https://leetcode.com/problems/symmetric-tree/
