--- a/docs/QuestionBank/Leetcode/103. Binary Tree Zigzag Level Order Traversal.md
+++ b/docs/QuestionBank/Leetcode/103. Binary Tree Zigzag Level Order Traversal.md
@@ -4,25 +4,41 @@ title: Binary Tree Zigzag Level Order Traversal
 sidebar_label: Binary Tree Zigzag Level Order Traversal
 tags: ["Patterns/Tree", "DataStructures/Tree"]
 ---
+import { Tree } from '@patternize/components'
 
 ## Problem Description
-
-Source: https://leetcode.com/problems/binary-tree-zigzag-level-order-traversal/
 
 Given a binary tree, return the zigzag level order traversal of its nodes' values. (ie, from left to right, then right to left for the next level and alternate between).
 
 For example:
-Given binary tree [3, 9, 20, null, null, 15, 7],
+Given binary tree [3, 9, 20, null, null, 15, 7], return its zigzag level order traversal as: [[3], [20, 9], [15, 7]].
 
-```
-    3
-   / \
-  9  20
-    /  \
-   15   7
-```
 
-return its zigzag level order traversal as: [[3], [20, 9], [15, 7]].
+export const BinaryTree = () => {
+    const tree = {
+        name: '3',
+        children: [
+            {
+                name: '9'
+            },
+            {
+                name: '20',
+                children: [
+                    {
+                        name: '15'
+                    },
+                    {
+                        name: '7'
+                    }
+                ]
+            }
+        ]
+    }
+    return <>{typeof window !== 'undefined' &&  <Tree inputData={tree} maxHeight={250}/>}</>
+}
+
+<BinaryTree />
+
 
 ## Solution
 
@@ -164,3 +180,5 @@ class Solution(object):
 
 </TabItem>
 </Tabs>
+
+Source: https://leetcode.com/problems/binary-tree-zigzag-level-order-traversal/
