--- a/docs/QuestionBank/Leetcode/108. Convert Sorted Array to Binary Search Tree.md
+++ b/docs/QuestionBank/Leetcode/108. Convert Sorted Array to Binary Search Tree.md
@@ -4,23 +4,42 @@ title: Convert Sorted Array to Binary Search Tree
 sidebar_label: Convert Sorted Array to Binary Search Tree
 tags: ["Patterns/Tree", "DataStructures/Tree"]
 ---
+import { Tree } from '@patternize/components'
 
 ## Problem Description
 
-Source: https://leetcode.com/problems/convert-sorted-array-to-binary-search-tree/
 
 Given an array where elements are sorted in ascending order, convert it to a height balanced BST. A height-balanced binary tree is defined as a binary tree in which the depth of the two subtrees of every node never differ by more than 1.
 
 For example:
 Given the sorted array: [-10, -3, 0, 5, 9], return the following tree:
 
-```
-        0
-       / \
-     -3   9
-     /   /
-   -10  5
-```
+export const BinaryTree = () => {
+    const tree = {
+        name: '0',
+        children: [
+            {
+                name: '-3',
+                children: [
+                    {
+                        name: '-10'
+                    }
+                ]
+            },
+            {
+                name: '9',
+                children: [
+                    {
+                        name: '5'
+                    }
+                ]
+            }
+        ]
+    }
+    return <>{typeof window !== 'undefined' &&  <Tree inputData={tree} maxHeight={250}/>}</>
+}
+
+<BinaryTree />
 
 ## Solution
 
@@ -114,3 +133,5 @@ public TreeNode sortedArrayToBST(int[] nums) {
 
 </TabItem>
 </Tabs>
+
+Source: https://leetcode.com/problems/convert-sorted-array-to-binary-search-tree/
