--- a/docs/QuestionBank/Leetcode/199. Binary Tree Right Side View.md
+++ b/docs/QuestionBank/Leetcode/199. Binary Tree Right Side View.md
@@ -4,6 +4,7 @@ title: Binary Tree Right Side View
 sidebar_label: Binary Tree Right Side View
 tags: ["Patterns/Tree", "DataStructures/Tree"]
 ---
+import { Tree } from '@patternize/components'
 
 ## Problem Description
 
@@ -12,19 +13,43 @@ Source: https://leetcode.com/problems/binary-tree-right-side-view/
 Given a binary tree, imagine yourself standing on the right side of it, return the values of the nodes you can see ordered from top to bottom.
 
 For example:
-Given binary tree [1, 2, 3, null, 6, null, 4, null, null, 5],
+Given binary tree [1, 2, 3, null, 6, null, 4, null, null, 5], return [1, 3, 4, 5].
 
-```
-    1   <----- 1
-   / \
-  2   3     <----- 3
-   \   \
-    6   4     <----- 4
-   /
-  5     <----- 5
-```
+export const BinaryTree = () => {
+    const tree = {
+        name: '1',
+        children: [
+            {
+                name: '2',
+                children: [
+                    {name: 'null'},
+                    {
+                        name: '6',
+                        children: [
+                            {
+                                name: '5'
+                            },
+                            {name: 'null'},
+                        ]
+                    }
+                ]
+            },
+            {
+                name: '3',
+                children: [
+                    {name: 'null'},
+                    {
+                        name: '4'
+                    }
+                ]
+            }
+        ]
+    }
+    return <>{typeof window !== 'undefined' &&  <Tree inputData={tree} maxHeight={250}/>}</>
+}
 
-return [1, 3, 4, 5].
+<BinaryTree />
+
 
 ## BFS Solution
 
