--- a/docs/QuestionBank/Leetcode/236. Lowest Common Ancestor of a Binary Tree.md
+++ b/docs/QuestionBank/Leetcode/236. Lowest Common Ancestor of a Binary Tree.md
@@ -4,6 +4,7 @@ title: Lowest Common Ancestor of a Binary Tree
 sidebar_label: Lowest Common Ancestor of a Binary Tree
 tags: ["Patterns/Tree", "DataStructures/Tree"]
 ---
+import { Tree } from '@patternize/components'
 
 ## Problem Description
 
@@ -14,19 +15,49 @@ Given a binary tree, return the lowest common ancestor (LCA) of two given nodes 
 According to the <a href="https://en.wikipedia.org/wiki/Lowest_common_ancestor">definition of LCA on Wikipedia</a>: “The lowest common ancestor is defined between two nodes p and q as the lowest node in T that has both p and q as descendants (where we allow **a node to be a descendant of itself**).”
 
 For example:
-Given binary tree [3, 5, 1, 6, 2, 0, 8, null, null, 7, 4], where p = 5, and q = 1,
+Given binary tree [3, 5, 1, 6, 2, 0, 8, null, null, 7, 4], where p = 5, and q = 1, return 3.
 
-```
-        3
-      /   \
-     5     1
-    / \   / \
-   6  2  0   8
-     / \
-    7   4
-```
+export const BinaryTree = () => {
+    const tree = {
+        name: '3',
+        children: [
+            {
+                name: '5',
+                children: [
+                    {
+                        name: '6'
+                    },
+                    {
+                        name: '2',
+                        children: [
+                            {
+                                name: '7'
+                            },
+                            {
+                                name: '4'
+                            }
+                        ]
+                    }
+                ]
+            },
+            {
+                name: '1',
+                children: [
+                    {
+                        name: '0'
+                    },
+                    {
+                        name: '8'
+                    }
+                ]
+            }
+        ]
+    }
+    return <>{typeof window !== 'undefined' &&  <Tree inputData={tree} maxHeight={250}/>}</>
+}
 
-return 3.
+<BinaryTree />
+
 
 ## Solution
 
