--- a/docs/QuestionBank/Leetcode/98. Validate Binary Search Tree.md
+++ b/docs/QuestionBank/Leetcode/98. Validate Binary Search Tree.md
@@ -5,6 +5,8 @@ sidebar_label: Validate Binary Search Tree
 tags: ["Patterns/Tree", "DataStructures/Tree"]
 ---
 
+import { Tree } from '@patternize/components'
+
 ## Problem Description
 
 Source: https://leetcode.com/problems/validate-binary-search-tree/
@@ -17,17 +19,33 @@ A **valid BST** is defined as follows:
 - The right subtree of a node contains only nodes with keys **greater than** the node's key.
 - Both the left and right subtrees must also be binary search trees.
 
-For example: Given binary tree [5, 1, 12, null, null, 15, 16],
+For example: Given binary tree [5, 1, 12, null, null, 15, 16], return false, since 15 is the left child of 12, but is greater than 12.
 
-```
-    5
-   / \
-  1  12
-    /  \
-   15   16
-```
 
-return false, since 15 is the left child of 12, but is greater than 12.
+export const BinaryTree = () => {
+    const tree = {
+    name: '5',
+    children: [
+      {
+        name: '1'
+      },
+      {
+        name: '12',
+        children: [
+          {
+            name: '15'
+          },
+          {
+            name: '16'
+          }
+        ]
+      }
+    ]
+  }
+    return <>{typeof window !== 'undefined' &&  <Tree inputData={tree} maxHeight={250}/>}</>
+}
+
+<BinaryTree />
 
 ## Solution
 
